--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,11 @@ dependencies:
     sdk: flutter
 
   path: any
+  #  path_provider: 1.6.5
+  yaml: 2.2.0
+  yamlicious: 0.1.0
+  recase: 3.0.0
+
   flutter_managed:
     git:
       url: http://github.com/stevenflautner/flutter_managed.git
@@ -77,3 +82,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
