--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  provider: 4.0.5
+  provider: ^4.3.2+2
   shared_preferences: 0.5.7
   flutter_localizations:
     sdk: flutter
