--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
 
   provider: ^4.3.2+2
-  shared_preferences: 0.5.7
+  shared_preferences: ^0.5.12
   flutter_localizations:
     sdk: flutter
 
